# recommend

./: Cargo.toml
src/: lib.rs  rating.rs  record.rs  score.rs  table.rs
tests/: books_ratings.rs  music_movies.rs
