[package]
name = "recommend"
version = "0.1.0"
authors = ["Kevin Del Castillo <quebin31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.11"

[dev-dependencies]
anyhow = "1"
assert_approx_eq = "1"
csv = "1"